--- a/package.json
+++ b/package.json
@@ -3,20 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.22",
+    "@fortawesome/free-solid-svg-icons": "5.10.1",
+    "@fortawesome/react-fontawesome": "0.1.4",
     "axios": "0.19.0",
     "bootstrap": "^4.3.1",
     "esri-leaflet": "2.2.3",
     "esri-leaflet-geocoder": "^2.2.13",
     "google-maps-react": "^2.0.2",
+    "jquery": "3.4.1",
     "leaflet": "1.5.1",
     "leaflet-geosearch": "2.7.0",
     "leaflet-routing-machine": "^3.2.12",
     "leaflet-search": "2.9.8",
+    "leaflet.locatecontrol": "^0.67.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-burger-menu": "^2.6.11",
     "react-dom": "^16.9.0",
-    "jquery": "3.4.1",
     "react-leaflet": "2.4.0",
     "react-leaflet-search": "^0.6.0",
     "react-router-dom": "^5.0.1",
